ingress-rule.yaml
# kubectl create secret tls ingress-secret --key mykey.key --cert STAR_singhritesh85_com.crt -n yelp-camp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelpcamp-ingress
  namespace: yelp-camp
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - secretName: ingress-secret
  rules:
  - host: yelpcamp.singhritesh85.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yelp-camp-folo
            port:
              number: 80
